...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fyR-RS-gwt">
                                        <rect key="frame" x="0.0" y="35" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtTitle" label="Title"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LI4-yb-1MN">
                                        <rect key="frame" x="0.0" y="70" width="343" height="30"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4ZV-vZ-kKv">
                                        <rect key="frame" x="0.0" y="105" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="txtAuthor" label="Author"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assunto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPr-UC-jSt">
                                        <rect key="frame" x="0.0" y="140" width="343" height="30"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7e-qT-MWO">
                                <rect key="frame" x="16" y="235" width="343" height="28"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnSearch" label="Search"/>
                                <state key="normal" title="Buscar"/>
                                <connections>
                                    <action selector="btnSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EpY-y8-Cwj"/>
                                </connections>
                            </button>
                        </subviews>
...
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sh4-qr-2Jw">
                                <rect key="frame" x="16" y="563" width="343" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnAvailability" label="Availability"/>
                                <state key="normal" title="Verificar Disponibilidade"/>
                                <connections>
                                    <action selector="btnAvailability:" destination="dUv-qe-FtE" eventType="touchUpInside" id="hj1-kL-TcT"/>
                                </connections>
                            </button>
                        </subviews>
...
